Fixed formatting and spacing

--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -5,10 +5,25 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { m
 body { font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; color: #c3c3c3; background-color: #111; -webkit-text-size-adjust: 100%; -webkit-font-feature-settings: "kern" 1; -moz-font-feature-settings: "kern" 1; -o-font-feature-settings: "kern" 1; font-feature-settings: "kern" 1; font-kerning: normal; display: flex; min-height: 100vh; flex-direction: column; }
 
 /** Set `margin-bottom` to maintain vertical rhythm */
-h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure, .highlight { margin-bottom: 15px; }
+h1, h2, h3, h5, h6, p, blockquote, pre, ul, ol, dl, figure, .highlight { margin-bottom: 15px; }
 
-p, blockquote, pre, ul, ol, dl {
-    color: #828282;
+h4 { margin-bottom: 5px; }
+
+p, blockquote, pre, ul, ol, dl, .work-description {
+    color: #a4a4a4;
+}
+
+/**.work-description, .skills {
+    display: inline-block;
+    text-align: left;
+    text-align: center;
+} */
+
+.skills {
+ color: #747277;
+ text-align: center;
+ margin-top: -15px;
+ margin-bottom: 15px;
 }
 
 /** `main` element */
